--- a/index.html
+++ b/index.html
@@ -22,17 +22,6 @@ h1{
     font-weight:800;
 }
 
-#loading{
-    margin-top:40px;
-    font-size:22px;
-    opacity:.9;
-}
-
-#evento{
-    opacity:.9;
-    margin-bottom:10px;
-}
-
 .pointer{
     width:0;
     height:0;
@@ -40,14 +29,6 @@ h1{
     border-right:18px solid transparent;
     border-top:35px solid white;
     margin:10px auto -15px auto;
-    z-index:10;
-    position:relative;
-}
-
-#wheel-container{
-    display:flex;
-    justify-content:center;
-    align-items:center;
 }
 
 canvas#wheel{
@@ -68,39 +49,13 @@ button{
     color:#003;
     font-weight:600;
     cursor:pointer;
-    box-shadow:0 8px 25px rgba(0,0,0,.3);
     margin-right:10px;
-}
-
-button:hover{
-    transform:scale(1.05);
 }
 
 #resultado{
     font-size:72px;
     margin-top:25px;
     font-weight:800;
-    line-height:1.1;
-}
-
-#contador{
-    margin-top:10px;
-    opacity:.85;
-}
-
-#historial{
-    margin-top:20px;
-    max-width:400px;
-    margin-left:auto;
-    margin-right:auto;
-    opacity:.9;
-}
-
-canvas#confetti{
-    position:fixed;
-    pointer-events:none;
-    top:0;
-    left:0;
 }
 
 </style>
@@ -109,26 +64,19 @@ canvas#confetti{
 <body>
 
 <h1>🎉 Personaliza tu Bingo 🎉</h1>
-<div id="loading">Cargando bingo...</div>
 <div id="evento"></div>
 
 <div class="pointer"></div>
-
-<div id="wheel-container">
-    <canvas id="wheel" width="500" height="500"></canvas>
-</div>
+<canvas id="wheel" width="500" height="500"></canvas>
 
 <div id="controls">
-<button id="spinBtn" onclick="spin()">GIRAR</button>
+<button onclick="spin()">GIRAR</button>
 <button onclick="resetear()">REINICIAR</button>
-<button onclick="fullscreen()">PANTALLA COMPLETA</button>
 </div>
 
 <div id="resultado"></div>
 <div id="contador"></div>
 <div id="historial"></div>
-
-<canvas id="confetti"></canvas>
 
 <audio id="tick" src="https://assets.mixkit.co/sfx/preview/mixkit-slot-machine-spin-1930.mp3"></audio>
 <audio id="win" src="https://assets.mixkit.co/sfx/preview/mixkit-winning-chimes-2015.mp3"></audio>
@@ -138,21 +86,20 @@ canvas#confetti{
 ////////////////////////////////////////////////////
 const params = new URLSearchParams(window.location.search);
 const id = params.get("id") || "demo";
-const modoTV = params.get("modo");
 
 const DATA_URL = `https://raw.githubusercontent.com/diegogallardo87/bingo-data/main/bingos/${id}.json?nocache=${Date.now()}`;
-    
+
 let palabras = [];
 let originales = [];
 let historial = [];
 
-////////////////////////////////////////////////////
-// CANVAS
-////////////////////////////////////////////////////
-
 const canvas = document.getElementById("wheel");
 const ctx = canvas.getContext("2d");
 const radius = canvas.width/2;
+
+////////////////////////////////////////////////////
+// COLOR
+////////////////////////////////////////////////////
 
 function color(i){
     const hue = Math.floor((360 / palabras.length) * i);
@@ -164,10 +111,7 @@ function color(i){
 ////////////////////////////////////////////////////
 
 fetch(DATA_URL)
-.then(r=>{
-    if(!r.ok) throw new Error("No se encontró el bingo");
-    return r.json();
-})
+.then(r=>r.json())
 .then(data=>{
 
     const guardado = localStorage.getItem(id);
@@ -178,50 +122,51 @@ fetch(DATA_URL)
         historial = estado.historial;
     }else{
         palabras = [...data.lista];
-        historial = [];
     }
 
     originales = [...data.lista];
-
     document.getElementById("evento").innerText = data.evento || "";
-    document.getElementById("loading").style.display="none";
 
-    if(modoTV === "tv"){
-        document.getElementById("controls").style.display="none";
-    }
-
-    crearRuleta();
+    drawWheel(rotation);
 })
 .catch(()=>{
-    document.body.innerHTML = `
-        <h1>Bingo no encontrado</h1>
-        <p>Verifica el enlace.</p>
-    `;
+    palabras = ["DEMO","RULETA","BINGO","PERSONALIZADO"];
+    originales=[...palabras];
+    drawWheel(rotation);
 });
 
 ////////////////////////////////////////////////////
-// CREAR RULETA
+// DIBUJAR RULETA (MUY IMPORTANTE: recibe rotación)
 ////////////////////////////////////////////////////
 
-function crearRuleta(){
+let rotation = 0;
 
+function drawWheel(rotDeg=0){
+
+if(palabras.length===0) return;
+
+ctx.setTransform(1,0,0,1,0,0);
 ctx.clearRect(0,0,canvas.width,canvas.height);
 
-let angle = (2*Math.PI)/palabras.length;
+ctx.save();
+
+ctx.translate(radius,radius);
+ctx.rotate(rotDeg*Math.PI/180);
+ctx.translate(-radius,-radius);
+
+const angle = (2*Math.PI)/palabras.length;
 
 palabras.forEach((p,i)=>{
 
 let start = i*angle;
 let end = start + angle;
 
-// slice
 ctx.beginPath();
 ctx.moveTo(radius,radius);
 ctx.arc(radius,radius,radius,start,end);
 ctx.fillStyle = color(i);
 ctx.fill();
 
-// texto
 ctx.save();
 
 ctx.translate(radius,radius);
@@ -238,6 +183,8 @@ ctx.fillText(p, radius-20, 8);
 ctx.restore();
 
 });
+
+ctx.restore();
 
 actualizarUI();
 }
@@ -263,67 +210,65 @@ historial
 }
 
 ////////////////////////////////////////////////////
-// SPIN PRO
+// SPIN PERFECTO
 ////////////////////////////////////////////////////
 
-let rotation=0;
 let girando=false;
 
 function spin(){
 
 if(girando) return;
-
-if(palabras.length===0){
-document.getElementById("resultado").innerText="SIN PALABRAS";
-return;
-}
+if(palabras.length===0) return;
 
 girando=true;
-document.getElementById("tick").play();
 
-let angle = 360/palabras.length;
-let index = Math.floor(Math.random()*palabras.length);
+const slice = 360 / palabras.length;
+const index = Math.floor(Math.random()*palabras.length);
 
-let stopAngle = index*angle + angle/2;
-let vueltas = 8 + Math.floor(Math.random()*5);
+// centro exacto del segmento
+const target = index*slice + slice/2;
 
-let finalRotation = rotation + vueltas*360 + (360-stopAngle);
+// queremos ese centro arriba (puntero)
+const finalOffset = 360 - target;
+
+// vueltas largas SIEMPRE
+const spins = 10 + Math.random()*5;
+
+const finalRotation = rotation + spins*360 + finalOffset;
 
 let start=null;
-let duration=5000;
+const duration=5200;
 
-function animate(timestamp){
+document.getElementById("tick").play();
 
-if(!start) start=timestamp;
+function animate(ts){
 
-let progress = timestamp-start;
-let t = progress/duration;
-let ease = 1-Math.pow(1-t,4);
+if(!start) start=ts;
+
+let progress = (ts-start)/duration;
+progress=Math.min(progress,1);
+
+// easing tipo casino
+let ease = 1-Math.pow(1-progress,5);
 
 let current = rotation + (finalRotation-rotation)*ease;
 
-ctx.setTransform(1,0,0,1,0,0);
-ctx.clearRect(0,0,canvas.width,canvas.height);
+drawWheel(current);
 
-ctx.translate(radius,radius);
-ctx.rotate(-current*Math.PI/180);
-ctx.translate(-radius,-radius);
+if(progress<1){
 
-crearRuleta();
-
-if(progress < duration){
 requestAnimationFrame(animate);
+
 }else{
 
 rotation = finalRotation % 360;
 
 let ganador = palabras.splice(index,1)[0];
-historial.unshift("🎉 " + ganador);
+historial.unshift("🎉 "+ganador);
+
+drawWheel(rotation);
 
 document.getElementById("resultado").innerText=ganador.toUpperCase();
-
-crearRuleta();
-confetti();
 
 document.getElementById("tick").pause();
 document.getElementById("win").play();
@@ -338,71 +283,15 @@ requestAnimationFrame(animate);
 ////////////////////////////////////////////////////
 
 function resetear(){
+
 palabras=[...originales];
 historial=[];
 localStorage.removeItem(id);
+
+rotation=0;
+
 document.getElementById("resultado").innerText="";
-crearRuleta();
-}
-
-function fullscreen(){
-document.documentElement.requestFullscreen();
-}
-
-////////////////////////////////////////////////////
-// CONFETTI
-////////////////////////////////////////////////////
-
-function confetti(){
-
-const canvasC=document.getElementById("confetti");
-const ctxC=canvasC.getContext("2d");
-
-canvasC.width=window.innerWidth;
-canvasC.height=window.innerHeight;
-
-let pieces=[];
-
-for(let i=0;i<150;i++){
-pieces.push({
-x:Math.random()*canvasC.width,
-y:Math.random()*canvasC.height- canvasC.height,
-r:Math.random()*6+4,
-d:Math.random()*50
-});
-}
-
-let angle=0;
-
-function draw(){
-
-ctxC.clearRect(0,0,canvasC.width,canvasC.height);
-angle+=0.01;
-
-for(let i=0;i<pieces.length;i++){
-
-let p=pieces[i];
-
-ctxC.beginPath();
-ctxC.arc(p.x,p.y,p.r,0,Math.PI*2,false);
-ctxC.fillStyle=`hsl(${Math.random()*360},75%,60%)`;
-ctxC.fill();
-
-p.y+=Math.cos(angle+p.d)+3;
-
-if(p.y>canvasC.height){
-p.y=-10;
-}
-
-}
-
-requestAnimationFrame(draw);
-}
-
-draw();
-
-setTimeout(()=>ctxC.clearRect(0,0,canvasC.width,canvasC.height),4000);
-
+drawWheel(rotation);
 }
 
 </script>
